--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,15 @@
         "drupal/devel": "^4.1",
         "drupal/devel_debug_log": "^1.0",
         "drupal/devel_kint_extras": "^1.0",
+        "drupal/devel_php": "^1.3",
         "drupal/drupal8_zymphonies_theme": "^1.4",
         "drupal/flexslider": "^2.0",
         "drupal/gin": "^3.0",
+        "drupal/ipless": "^3.0",
+        "drupal/maillog": "^1.0@beta",
         "drupal/paragraphs": "^1.12",
         "drupal/responsive_slideshow": "^1.2",
+        "drupal/rules": "^3.0@alpha",
         "drupal/superfish": "^1.4",
         "drupal/video_embed_field": "^2.4",
         "drupal/webform": "^6.0",
